# tp-spring/src/main/java/web/controller/TodoListController.java
@@ -1,0 +1,22 @@
+package web.controller;
+
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.MediaType;
+import org.springframework.web.bind.annotation.*;
+import web.model.TodoList;
+import web.service.TodoListService;
+
+@RestController
+@RequestMapping("api/v2/public/todolist")
+@CrossOrigin
+public class TodoListController {
+
+    @Autowired
+    TodoListService todoListService;
+
+    @PostMapping(path = "", produces = MediaType.APPLICATION_JSON_VALUE)
+    public TodoList post(@RequestBody final TodoList todoList) {
+        todoListService.addTodo(todoList);
+        return todoList;
+    }
+}
